@@ -1,6 +1,9 @@
 			   XPCE ChangeLog
 			   ==============
 
+* FIXED: default-button and modified-item handling in nested dialog-groups.
+  Juergen Repp.
+
 * FIXED: Make `window->background' work with images on Windows.  Used to be
   supported on the X11 version only.
 
